[gd_scene load_steps=2 format=3 uid="uid://b2oqj5wvx6yni"]

[ext_resource type="Script" path="res://scripts/ui/plot_card.gd" id="1_plot_card"]

[node name="PlotCard" type="PanelContainer"]
custom_minimum_size = Vector2(200, 280)
script = ExtResource("1_plot_card")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlotNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Plot Name"
horizontal_alignment = 1

[node name="PreviewRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="RichnessLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "★★★ Rich"
horizontal_alignment = 1

[node name="PriceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Starting Bid: $150"
horizontal_alignment = 1

[node name="BidButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Place Bid"
